--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
   </div>
 </div>
 
+<audio id="ringtone" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
+
 <script>
 // Clock
 function updateClock(){
@@ -89,9 +91,9 @@ const addBtn = document.getElementById('addBtn');
 const clearAll = document.getElementById('clearAll');
 const totalPointsEl = document.getElementById('totalPoints');
 const rewardsList = document.getElementById('rewardsList');
-
 const reminderDate = document.getElementById('reminderDate');
 const reminderTime = document.getElementById('reminderTime');
+const ringtone = document.getElementById('ringtone');
 
 let reminders = JSON.parse(localStorage.getItem('reminders')) || [];
 let growthData = JSON.parse(localStorage.getItem('growthData')) || {};
@@ -158,7 +160,7 @@ addBtn.addEventListener('click', ()=>{
   const reward = getReward(growthData[tree]);
   if(reward && !rewardsEarned.includes(reward)) rewardsEarned.push(reward);
 
-  reminders.push({tree, icon, freq, amount, date, time, level, points:growthData[tree]});
+  reminders.push({tree, icon, freq, amount, date, time, level, points:growthData[tree], notified:false});
 
   localStorage.setItem('reminders', JSON.stringify(reminders));
   localStorage.setItem('growthData', JSON.stringify(growthData));
@@ -180,6 +182,33 @@ clearAll.addEventListener('click', ()=>{
   updateRewards();
 });
 
+// Reminder Notifications
+if ("Notification" in window && Notification.permission !== "granted") {
+  Notification.requestPermission();
+}
+
+function checkReminders() {
+  const now = new Date();
+  reminders.forEach(rem => {
+    if(rem.notified) return;
+    const remDateTime = new Date(`${rem.date}T${rem.time}`);
+    if(now >= remDateTime) {
+      rem.notified = true;
+      localStorage.setItem('reminders', JSON.stringify(reminders));
+
+      if("Notification" in window && Notification.permission === "granted") {
+        new Notification(`Water your ${rem.tree}!`, {
+          body: `Time to water ${rem.tree} with ${rem.amount} ml.`,
+          icon: rem.icon
+        });
+      }
+
+      ringtone.currentTime = 0;
+      ringtone.play();
+    }
+  });
+}
+setInterval(checkReminders, 1000);
 
 // Initialize
 renderReminders();
